project: Add modernizer